Fix ticket21, temporary audio array was too small. Signed-off-by: Michael Niedermayer <michaelni@gmx.at>